--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     border: 2px solid;
     display: flex;
     margin: 2vh auto;
+    flex-wrap: wrap;
 }
 
 .flex-reverse {
@@ -27,8 +28,8 @@ h1, h2 {
 
 span {
     display: flex;
-    height: 100px;
-    width: 100px;
+    height: 15vmin;
+    width: 15vmin;
     border: 2px solid;
     justify-content: center;
     align-items: center;
